--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "slug": "^5.1.1"
   },
   "devDependencies": {
+    "eslint": "^8.5.0",
     "jest": "^27.4.5",
     "nodemon": "^2.0.15",
     "supertest": "^6.1.6"
