--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "express-validator": "^6.14.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.3",
-    "slug": "^5.1.1"
+    "slug": "^5.1.1",
+    "winston": "^3.3.3"
   },
   "devDependencies": {
     "eslint": "^8.5.0",
