--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "dev": "nodemon index.js",
-    "start": "node index.js",
+    "build": "babel src -d dist",
+    "insall": "npm install",
+    "dev": "nodemon src/index.js",
+    "start": "rm -rf node_modules dist logs && npm run insall && npm run build && cross-env NODE_ENV=production babel-node dist/index.js",
     "docs": "jsdoc -c docs/conf.json"
   },
   "keywords": [],
@@ -14,6 +16,7 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "config": "^3.3.7",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
@@ -24,6 +27,11 @@
     "winston": "^3.3.3"
   },
   "devDependencies": {
+    "@babel/cli": "^7.17.3",
+    "@babel/core": "^7.17.4",
+    "@babel/node": "^7.16.8",
+    "@babel/preset-env": "^7.16.11",
+    "cross-env": "^7.0.3",
     "eslint": "^8.5.0",
     "jest": "^27.4.5",
     "nodemon": "^2.0.15",
